--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/common": "^8.4.1",
+    "@nestjs/core": "^8.4.1",
     "@nestjs/platform-express": "^8.0.0",
+    "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
