view detail and manage users

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,9 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-#env
+#ignore URL link
 .env
+
+#packages
+package.json
+package-lock.json
