--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fix",
+  "name": "tech-hub",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -31,9 +31,11 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
@@ -49,8 +51,6 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
