--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flash": "^1.1.0",
     "hbs": "^4.2.0",
     "mysql2": "^2.3.3",
+    "nestjs-paypal-payouts": "^1.0.3",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
